@@ -5,6 +5,9 @@ Revision history for Data::ObjectDriver
 0.04_XX
     - Added has_a() construct to build linking methods between classes.
     - remove() returns number of affected rows, with DBI semantics.
+    - Bulk inserting of data can now be done with the new bulk_insert()
+      Class method.  It uses Postgres' COPY command or MySQL's 
+      multi-value inserts to load data quickly.
 
 0.03  2006.08.05
     - Added an inflate and deflate mechanism to memcached caching. When objects
